WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301462
REGRESSION (Safari 26,
292627@main
): Translate on semi transparent background sometimes makes background darker
https://bugs.webkit.org/show_bug.cgi?id=301462
Summary
REGRESSION (Safari 26, 292627@main): Translate on semi transparent background...
Valerii
Reported
2025-10-25 06:05:33 PDT
Created
attachment 477197
[details]
video of bug Given
https://codepen.io/balepas/pen/ogbyvxW
```html <h1>Hover me</h1> ``` ```css body { background: rgba(0 0 0 / 50%); } h1:hover { transform: translateY(10px); transition: transform 10s ease; background: transparent; } ``` When you hover over an h1 element, the background color underneath it remains the same, but the page background color may become darker, as if two semi transparent backgrounds were underneath each other. Bug is reproduced in Safari 26.0.1 and Safari TP Release 230 (WebKit 20623.1.11.19.3)
Attachments
video of bug
(2.86 MB, video/quicktime)
2025-10-25 06:05 PDT
,
Valerii
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2025-10-27 13:28:51 PDT
Thank you for the report, I can reproduce this. Not sure what's different between attempts when it happens, and those when it does not. Does not reproduce: Safari 18.6 on macOS Sequoia 15.6 Reproduces: STP 223 on macOS Sequoia 15.6
Radar WebKit Bug Importer
Comment 2
2025-10-27 13:28:57 PDT
<
rdar://problem/163509267
>
Simon Fraser (smfr)
Comment 3
2025-10-27 14:13:19 PDT
We must be painting the body background twice.
Nathan Solomon
Comment 4
2026-01-06 16:32:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56166
EWS
Comment 5
2026-01-12 18:18:43 PST
Committed
305492@main
(366280b0f896): <
https://commits.webkit.org/305492@main
> Reviewed commits have been landed. Closing PR #56166 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug