Source/WebCore/rendering/RenderLayerCompositor.cpp
@@ -5251,8 +5251,11 @@ void RenderLayerCompositor::attachRootLayer(RootLayerAttachment attachment)
         case RootLayerAttachedViaEnclosingFrame: {
             // The layer will get hooked up via RenderLayerBacking::updateConfiguration()
             // for the frame's renderer in the parent document.
-            if (RefPtr ownerElement = m_renderView.protectedDocument()->ownerElement())
+            if (RefPtr ownerElement = m_renderView.protectedDocument()->ownerElement()) {
                 ownerElement->scheduleInvalidateStyleAndLayerComposition();
+                if (CheckedPtr renderer = ownerElement->renderer())
+                    renderer->repaint();
+            }
             break;
         }
     }
